# voice-pipeline-agent-python

./: .gitignore  README.md  pyproject.toml
config/: logger_config.py  settings.py
services/: chart_handler.py
task1/: baseline.py
task2/: baseline_with_VAD.py
task3/: baseline_with_model_td.py
task4/: baseline_partial_hypothesis.py  preemptive_gen.py
task5/: ssml.py
task6/: advanced.py  baseline.py
